--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
-          <ul class="navbar-nav index-navbar-nav mr-auto">
+          <ul class="navbar-nav index-navbar-nav align-items-center  mr-auto">
             <li class="nav-item">
               <a class="nav-link " href="#">الرئيسية </a>
             </li>
@@ -60,6 +60,14 @@
             </li>
             <li class="nav-item">
               <a class="nav-link " href="#contact">تواصل معنا</a>
+            </li>
+            <li class="nav-item py-3 d-flex align-items-center">
+              <a href="#!" class="animateButton mx-auto px-4">
+                <svg>
+                  <rect x="0" y="0" fill="none" width="100%" height="100%" />
+                </svg>
+                انضم إلينا
+              </a>
             </li>
           </ul>
         </div>
@@ -368,7 +376,7 @@
           </div>
         </div>
         <div class="col-md-6 p-2">
-          <p> كل الحقوق محفوظة <a href="#"> تاهت ولقيتها </a></p>
+          <p> كل الحقوق محفوظة <a href="#"> تبشر | tabsher </a></p>
         </div>
       </div>
     </div>
